--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>کیفش|کیف و کفش</title>
   <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <link rel='stylesheet' type='text/css' href='http://www.fontonline.ir/css/BZiba.css'>
+  <link rel="stylesheet" type='text/css' href="https://cdn.rawgit.com/rastikerdar/vazir-font/v19.2.0/dist/font-face.css">
 	
 <style>
 *{
@@ -16,7 +16,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-family: BZiba,'BZiba',tahoma;
+	font-family: vazir, sans-serif;
 	background: linear-gradient(120deg, #a8ff78,  #78ffd6);
 	width: 100%;
 	height: 100vh;
