--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@ p {
 		<div class="content animated fadeInLeft">
 			<span class="bg animated fadeInDown">بزودی ...</span>
 			<h1>کیفش<br/> فروشگاه کیف و کفش چرم</h1>
-			<p>: مزایای موب کارت</p><br/>
-			<p>یک میلیون خرید از کیفش...(ست کیف و کفش چرم طبیعی برای بانوان)</p><br/>
-			<p>یک میلیون بازپرداخت به شما...</p><br/>
+			<p>مزایای موب کارت :</p><br/>
+			<p>1-یک میلیون خرید از کیفش...<br/>(ست کیف و کفش چرم طبیعی برای بانوان)</p>
+			<p>2-یک میلیون بازپرداخت به شما...</p>
 			
 			
 			<div class="button">
