--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@ p {
 		<div class="content animated fadeInLeft">
 			<span class="bg animated fadeInDown">بزودی ...</span>
 			<h1>کیفش<br/> فروشگاه کیف و کفش چرم</h1>
-			<p>مزایای موب کارت :</p><br/>
-			<p>1-یک میلیون خرید از کیفش...<br/>(ست کیف و کفش چرم طبیعی برای بانوان)</p>
-			<p>2-یک میلیون بازپرداخت به شما...</p>
-			
+			<p>مزایای موب کارت :</p>
+			<p>1- یک میلیون خرید از کیفش...<br/>(ست کیف و کفش چرم طبیعی برای بانوان)</p>
+			<p>2-یک میلیون بازپرداخت به شما ...<br/>(طراحی ، ساخت و فروشی منحصربفرد)</p>
+			<p>3-بیمه ی پنج میلیون برای پنج سال ...<br/>(زیبا و باکیفیتی تضمین شده)</p>
+			<span>از رایگان هم مجانی تر میشود... ارزش انتظار دارد</span>
 			
 			<div class="button">
 				<a href="#">$115</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>ADD TO CART</a>
