--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@ p {
 			<h1>کیفش<br/> فروشگاه کیف و کفش چرم</h1>
 			<p>مزایای موب کارت :</p>
 			<p>1- یک میلیون خرید از کیفش...<br/>(ست کیف و کفش چرم طبیعی برای بانوان)</p>
-			<p>2-یک میلیون بازپرداخت به شما ...<br/>(طراحی ، ساخت و فروشی منحصربفرد)</p>
-			<p>3-بیمه ی پنج میلیون برای پنج سال ...<br/>(زیبا و باکیفیتی تضمین شده)</p>
-			<span>از رایگان هم مجانی تر میشود... ارزش انتظار دارد</span>
+			<p>2- یک میلیون بازپرداخت به شما...<br/>(طراحی ، ساخت و فروشی منحصربفرد)</p>
+			<p>3- بیمه ی پنج میلیون برای پنج سال...<br/>(زیبا و باکیفیتی تضمین شده)</p>
+			<span>...از رایگان هم مجانی تر می شود... ارزش انتظار دارد</span>
 			
 			<div class="button">
-				<a href="#">$115</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>ADD TO CART</a>
+				<div class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>آدرس فروشگاه : جلال آل احمد، تقاطع یادگار ، مرکز خرید پاسارگارد ، ورودی(D)، پلاک 411</div>
 			</div>
 			
 		</div>
