--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@ p {
 			<span>از رایگان هم مجانی تر می شود... ارزش انتظار دارد...</span>
 			
 			<div class="button">
-				<div class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>آدرس فروشگاه : جلال آل احمد، تقاطع یادگار ، مرکز خرید پاسارگارد ، ورودی(D)، پلاک 411</div>
+			    <div class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>آدرس فروشگاه : جلال آل احمد، تقاطع یادگار ، مرکز خرید پاسارگارد ، ورودی(D)، پلاک 411</div>
+			    <div class="cart-btn" href="#"><i class="cart-icon ion-call"></i>شماره تماس : 09390647979</div>
+			    <div class="cart-btn" href="#"><i class="cart-icon ion-laptop"></i>وبسایت : www.kifsh.ir</div>
 			</div>
 			
 		</div>
