--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	position: relative;
 	background: #fff;
 	border-radius: 8px;
-	height: 450px;
+	height: 490px;
 	width: 750px;
 	overflow: hidden;
 	display: flex;
@@ -151,7 +151,7 @@ p {
 			
 			<div class="button">
 			    <div class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>آدرس فروشگاه : جلال آل احمد، تقاطع یادگار ، مرکز خرید پاسارگارد ، ورودی(D)، پلاک 411</div>
-			    <div class="cart-btn" href="#"><i class="cart-icon ion-call"></i>شماره تماس : 09390647979</div>
+			    <div class="cart-btn" href="#"><i class="cart-icon ion-md-call"></i>شماره تماس : 09390647979</div>
 			    <div class="cart-btn" href="#"><i class="cart-icon ion-laptop"></i>وبسایت : www.kifsh.ir</div>
 			</div>
 			
