--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8"/>
 <title>کیفش|کیف و کفش</title>
   <meta name="viewport" content="width=device-width, initial-scale=0.45">
-  <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" type='text/css' href="https://cdn.rawgit.com/rastikerdar/vazir-font/v19.2.0/dist/font-face.css">
 	
@@ -151,7 +151,7 @@ p {
 			
 			<div class="button">
 			    <div class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>آدرس فروشگاه : جلال آل احمد، تقاطع یادگار ، مرکز خرید پاسارگارد ، ورودی(D)، پلاک 411</div>
-			    <div class="cart-btn" href="#"><i class="cart-icon ion-md-call"></i>شماره تماس : 09390647979</div>
+			    <div class="cart-btn" href="#"><i class="cart-icon ion-call"></i>شماره تماس : 09390647979</div>
 			    <div class="cart-btn" href="#"><i class="cart-icon ion-laptop"></i>وبسایت : www.kifsh.ir</div>
 			</div>
 			
