--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ p {
 			
 			<div class="button">
 			    <div class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>آدرس فروشگاه : جلال آل احمد، تقاطع یادگار ، مرکز خرید پاسارگارد ، ورودی(D)، پلاک 411</div>
-			    <div class="cart-btn" href="#"><i class="cart-icon ion-call"></i>شماره تماس : 09390647979</div>
-			    <div class="cart-btn" href="#"><i class="cart-icon ion-laptop"></i>وبسایت : www.kifsh.ir</div>
+			    <div class="cart-btn" href="#"><ion-icon name="call"></ion-icon>شماره تماس : 09390647979</div>
+			    <div class="cart-btn" href="#"><i class="cart-icon ion-globe"></i>وبسایت : www.kifsh.ir</div>
 			</div>
 			
 		</div>
