--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	justify-content: center;
 	align-items: center;
 	font-family: vazir, sans-serif;
-	background: linear-gradient(120deg, #a8ff78,  #78ffd6);
+	background: linear-gradient(-120deg, #1D4350,  #A43931);
 	width: 100%;
 	height: 100vh;
 }
